complete missing swagger
